[gd_scene load_steps=12 format=3 uid="uid://hcfsn06a2085"]

[ext_resource type="Texture2D" uid="uid://dnbnxosef5r58" path="res://res/sprites/citymap.png" id="1_qljbr"]
[ext_resource type="Script" path="res://crisisPhase/stage/city_map.gd" id="2_a4fhc"]
[ext_resource type="Texture2D" uid="uid://f8j852tv3e22" path="res://res/sprites/GUI/buttons/invisible_button.png" id="3_wxrxy"]
[ext_resource type="Texture2D" uid="uid://b210wc8r8w571" path="res://res/sprites/GUI/buttons/button_back.png" id="4_b0mqi"]
[ext_resource type="Texture2D" uid="uid://botpe5ux15226" path="res://res/sprites/GUI/icons/icon_pin_home.png" id="5_kxfhx"]
[ext_resource type="Texture2D" uid="uid://6bj8wmm5lv04" path="res://res/sprites/GUI/icons/icon_pin.png" id="6_bj4s0"]
[ext_resource type="Texture2D" uid="uid://11wqmydgbpf2" path="res://res/sprites/GUI/icons/icon_pin_event.png" id="6_um0qv"]
[ext_resource type="PackedScene" uid="uid://c3u4ov75gx85f" path="res://GUI/doorbells_GUI.tscn" id="7_s5hyn"]

[sub_resource type="Animation" id="Animation_xndm7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_inmhp"]
resource_name = "pin_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -16), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uc87h"]
_data = {
"RESET": SubResource("Animation_xndm7"),
"pin_animation": SubResource("Animation_inmhp")
}

[node name="CityMap" type="TextureRect"]
z_index = 1
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0
texture = ExtResource("1_qljbr")
script = ExtResource("2_a4fhc")

[node name="HomeBtn" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 277.0
offset_top = 478.0
offset_right = 405.0
offset_bottom = 606.0
texture_normal = ExtResource("3_wxrxy")

[node name="BackBtn" type="TextureButton" parent="." groups=["Button"]]
visible = false
layout_direction = 2
layout_mode = 0
offset_left = 484.0
offset_top = 931.0
offset_right = 548.0
offset_bottom = 995.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("4_b0mqi")

[node name="MarketBtn" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 140.0
offset_top = 880.0
offset_right = 268.0
offset_bottom = 1008.0
texture_normal = ExtResource("3_wxrxy")

[node name="PenthouseBtn" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 333.0
offset_top = 735.0
offset_right = 461.0
offset_bottom = 863.0
texture_normal = ExtResource("3_wxrxy")

[node name="TownhallBtn" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 34.0
offset_top = 736.0
offset_right = 162.0
offset_bottom = 864.0
texture_normal = ExtResource("3_wxrxy")

[node name="RowhouseBtn" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 96.0
offset_top = 510.0
offset_right = 224.0
offset_bottom = 638.0
texture_normal = ExtResource("3_wxrxy")

[node name="ComplexBtn" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 83.0
offset_top = 347.0
offset_right = 211.0
offset_bottom = 475.0
texture_normal = ExtResource("3_wxrxy")

[node name="GardenhouseBtn" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 365.0
offset_top = 314.0
offset_right = 493.0
offset_bottom = 442.0
texture_normal = ExtResource("3_wxrxy")

[node name="MansionBtn" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 434.0
offset_top = 158.0
offset_right = 562.0
offset_bottom = 286.0
texture_normal = ExtResource("3_wxrxy")

[node name="ParkBtn" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 369.0
offset_top = 539.0
offset_right = 497.0
offset_bottom = 667.0
texture_normal = ExtResource("3_wxrxy")

[node name="HomePin" type="Sprite2D" parent="."]
process_mode = 3
position = Vector2(300, 460)
texture = ExtResource("5_kxfhx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HomePin"]
libraries = {
"": SubResource("AnimationLibrary_uc87h")
}

[node name="OptEventPin_Template" type="Sprite2D" parent="."]
process_mode = 3
visible = false
position = Vector2(352, 552)
texture = ExtResource("6_um0qv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="OptEventPin_Template"]
libraries = {
"": SubResource("AnimationLibrary_uc87h")
}

[node name="OptEventPins" type="Node2D" parent="."]

[node name="CurrPosPin" type="Sprite2D" parent="."]
process_mode = 3
position = Vector2(300, 460)
texture = ExtResource("6_bj4s0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CurrPosPin"]
libraries = {
"": SubResource("AnimationLibrary_uc87h")
}

[node name="DoorbellsGUI" parent="." instance=ExtResource("7_s5hyn")]
visible = false
layout_mode = 1

[connection signal="pressed" from="HomeBtn" to="." method="_on_home_btn_pressed"]
[connection signal="pressed" from="BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="MarketBtn" to="." method="_on_marketplace_btn_pressed"]
[connection signal="pressed" from="PenthouseBtn" to="." method="_on_elias_flat_btn_pressed"]
[connection signal="pressed" from="TownhallBtn" to="." method="_on_townhall_btn_pressed"]
[connection signal="pressed" from="RowhouseBtn" to="." method="_on_julias_house_btn_pressed"]
[connection signal="pressed" from="ComplexBtn" to="." method="_on_complex_btn_pressed"]
[connection signal="pressed" from="GardenhouseBtn" to="." method="_on_gardenhouse_btn_pressed"]
[connection signal="pressed" from="MansionBtn" to="." method="_on_villa_btn_pressed"]
[connection signal="pressed" from="ParkBtn" to="." method="_on_park_btn_pressed"]
